<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_background"
    tools:context=".LoginPage">

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/vec_main_back_arrow"
        android:contentDescription="@string/backArrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp" />

    <!-- Piggy Logo -->

    <!-- Email EditText -->

    <!-- Password EditText -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/piggy_logo"
        android:src="@drawable/pic_piggylogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backArrow" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/bg_textfields"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/bg_textfields"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <ImageView
        android:id="@+id/eyeIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/vec_eye_open"
        android:contentDescription="@string/toggle_password_visibility"
        app:layout_constraintTop_toTopOf="@id/passwordEditText"
        app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        android:layout_marginEnd="12dp" />

    <!-- LoginPage Button -->

    <!-- OR Text -->

    <Button
        android:id="@+id/loginButton"
        style="@style/mainButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#000000"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Google Icon -->

    <!-- GitHub Icon -->

    <!-- Sign Up Text -->

    <ImageView
        android:id="@+id/googleIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="-20dp"
        android:contentDescription="@string/login_with_google"
        android:src="@drawable/vec_google"
        app:layout_constraintBottom_toBottomOf="@+id/githubIcon"
        app:layout_constraintEnd_toStartOf="@+id/orText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/githubIcon" />

    <ImageView
        android:id="@+id/githubIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="-20dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/login_with_github"
        android:src="@drawable/vec_github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orText"
        app:layout_constraintTop_toBottomOf="@+id/orText" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/dontHaveAccount"
        android:textAlignment="center"
        android:textColor="#555555"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>
