<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:background="@drawable/bg_gradient_background"
    tools:context=".RegisterPage">


    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/vec_main_back_arrow"
        android:contentDescription="@string/backArrow"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/piggy_logo"
        android:src="@drawable/pic_piggylogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backArrow" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/email_address"
        android:textColor="@color/primaryText"
        android:textSize="15sp"
        android:fontFamily="@font/roboto"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText" />



    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_textfields"
        android:fontFamily="@font/roboto"
        android:autofillHints="emailAddress"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/first_name"
        android:textColor="@color/primaryText"
        android:textSize="15sp"
        android:fontFamily="@font/roboto"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/nameFields"
        app:layout_constraintStart_toStartOf="@+id/nameFields" />


    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="187dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/last_name"
        android:visibility="gone"
        android:textColor="@color/primaryText"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/nameFields"
        app:layout_constraintStart_toStartOf="@+id/nameFields" />

    <LinearLayout
        android:id="@+id/nameFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText">

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_textfields"
            android:fontFamily="@font/roboto"
            android:autofillHints="givenName"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/primaryText" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_textfields"
            android:fontFamily="@font/roboto"
            android:autofillHints="familyName"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/primaryText" />
    </LinearLayout>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/primaryText"
        android:textSize="15sp"
        android:fontFamily="@font/roboto"
        android:visibility="gone"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText" />



    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_textfields"
        android:fontFamily="@font/roboto"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameFields" />

    <ImageView
        android:id="@+id/eyeIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/vec_eye_open"
        android:contentDescription="@string/toggle_password_visibility"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="@id/passwordEditText"
        app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText" />


    <Button
        android:id="@+id/signUpButton"
        style="@style/mainButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#000000"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/googleIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="-20dp"
        android:contentDescription="@string/login_with_google"
        android:src="@drawable/vec_google"
        app:layout_constraintBottom_toBottomOf="@+id/githubIcon"
        app:layout_constraintEnd_toStartOf="@+id/orText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/githubIcon" />


    <ImageView
        android:id="@+id/githubIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="-20dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/login_with_github"
        android:src="@drawable/vec_github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orText"
        app:layout_constraintTop_toBottomOf="@+id/orText" />


    <TextView
        android:id="@+id/loginRedirectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/alreadyHaveAccount"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        app:layout_constraintTop_toBottomOf="@+id/githubIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
