<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/section_budgets"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_help_button"
    android:padding="12dp"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/sectionHeader"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/help_budgets"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/expandIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/help_budgets"
            android:src="@drawable/ic_arrow_drop_down" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sectionContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_budgets_info1" />

        <ImageView
            android:id="@+id/BudgetHelpImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help_budget1"
            android:contentDescription="@string/help_budgets"
            android:layout_marginTop="8dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_budgets_info2"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/BudgetHelpImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help_budget2"
            android:contentDescription="@string/help_budgets"
            android:layout_marginTop="8dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_budgets_info3"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</LinearLayout>
